--no-fork option that uses a ClassLoader to isolate instead of a new JVM. Improved wildcard matching.